# CrawlerScope

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
configs/: rate_limits.yaml
crawler_scope/: healthcheck.py
crawler_scope/schemas/: __init__.py  access.py  auth.py  doi.py  download.py  failure.py  local_corpus.py  manual.py  metadata.py  paper.py  parse.py  quality.py  report.py  requirement.py  supplement.py  task_spec.py
crawler_scope/utils/: __init__.py  rate_limit.py
crawler_scope/workflows/: __init__.py  access_plan_workflow.py  (+9 more)
scripts/: legacy_wiley_supplement_backfill_cdp.py
tests/: test_access_plan_workflow.py  test_access_planner.py  test_browser_session_manager.py  test_cache_store.py  test_crossref_client.py  test_doi_normalizer.py  test_doi_resolve_workflow_mock.py  test_healthcheck.py  test_legacy_wiley_supplement_backfill_cdp.py  test_local_corpus_matcher.py  test_local_corpus_scanner.py  test_local_supplement_scanner.py  test_local_wiley_ingestion_workflow.py  test_metadata_merger.py  test_open_pdf_download_workflow.py  test_openalex_client.py  test_pdf_downloader.py  test_pdf_parse_workflow.py  test_pdf_parser.py  test_rate_limit.py  test_report_builder.py  test_report_workflow.py  test_run_store.py  test_schemas.py  test_semantic_scholar_client.py  test_smoke_workflow_mock.py  test_unpaywall_client.py  test_wiley_authenticated_supplement_workflow.py  test_wiley_browser_adapter.py  test_wiley_manual_handoff.py  test_wiley_manual_workflow.py  test_wiley_supplement_adapter.py  test_wiley_supplement_workflow.py
(+29 files in other folders)
