[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlerscope"
version = "0.1.0"
description = "Crawler-specialized agent system built on top of AgentScope."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentscope",
    "pydantic",
    "pydantic-settings",
    "typer",
    "rich",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]
